--- a/css/comentarios.css
+++ b/css/comentarios.css
@@ -23,7 +23,7 @@
         .comments-container {
             margin: 60px auto 15px;
             width: 768px;
-            margin-top: 300px;
+            margin-top: 200px;
         }
 
         .comments-container h1 {
@@ -178,3 +178,73 @@ textarea{
 #boton:hover {
     cursor: pointer;
 }
+
+/*card*/
+.containerCard{
+   display: inline-block;
+  margin-top: 50px;
+ margin-left: 400px;
+  max-width: 500px;
+   
+}
+
+.card{
+    
+    width: 250px;
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, .2);
+    cursor: default;
+    transition: all 400ms ease;
+}
+
+.card:hover{
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, .4);
+    transform: translateY(-3%);
+}
+
+.card img{
+    width: 100%;
+    height: 150px;
+}
+
+.card .contenido{
+    padding: 15px;
+    text-align: center;
+}
+
+
+
+.card .contenido p {
+    line-height: 1.5;
+    color: #6a6a6a;
+    font-family:  'Oswald', sans-serif;
+}
+
+
+
+.card .contenido h3{
+    font-family:  'Oswald', sans-serif;
+    font-weight: 400px;
+    margin-bottom: 15px;
+}
+
+.card .contenido a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    color: #2fb4cc;
+    border: 1px solid #22f4cc;
+    border-radius: 4px;
+    transition: all 400ms ease;
+}
+
+.card .contenido a:hover{
+    background: #2fb4cc;
+    color: #fff;
+}
+
+
